login screen created

--- a/WhiteBooks/WhiteBooks.vbproj
+++ b/WhiteBooks/WhiteBooks.vbproj
@@ -45,4 +45,8 @@
     <Folder Include="Modules\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.OleDb" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
